--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&family=Roboto:wght@400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&family=Roboto:wght@400;500&display=swap');
+
 *{
     margin: 0;
     padding: 0;
@@ -15,7 +18,7 @@ a:hover{
 }
 /* Adding Fonts*/
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&family=Roboto:wght@400;500&display=swap');
+
 
 .header{
     background: linear-gradient(-40deg, #FBF1D5, #fff);
@@ -45,7 +48,7 @@ a:hover{
     transition: 0.5s all ease;
 }
 button.nav-button{
-    background:#FFBA00;
+    background:#070A57;
     font-family: 'Poppins', sans-serif;
     font-size: 16px;
     padding: 5px 10px;
@@ -61,7 +64,7 @@ button.nav-button{
     height: 100%;
 }
 .highlight{
-    color: #FFBA00;
+    color:#070A57;
 }
 .left-content h2 {
     font-family: 'Roboto', sans-serif;
@@ -80,7 +83,7 @@ button.nav-button{
     color: #64707D;
 }
 .call-to-action button {
-    background: #FFBA00;
+    background:#070A57;
     border: none;
     font-family: 'Roboto',sans-serif;
     font-size: 18px;
@@ -96,7 +99,7 @@ button.nav-button{
     font-family: 'Roboto',sans-serif;
     font-size: 18px;
     font-weight: 500;
-    color: #FFBA00;
+    color:#070A57;
     text-decoration: underline;
     margin-left: 30px;
 }
@@ -189,7 +192,7 @@ h2.col-md-6 {
 }
 
 .footer-widget-4 ul li a:hover {
-    color: #FFBA00;
+    color: #070A57;
     transition: all 0.5s ease-in-out;
 }
 
@@ -210,7 +213,7 @@ a:hover{
 }
 /* Adding Fonts*/
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&family=Roboto:wght@400;500&display=swap');
+
 
 .header{
     background: linear-gradient(-40deg, #FBF1D5, #fff);
@@ -240,7 +243,7 @@ a:hover{
     transition: 0.5s all ease;
 }
 button.nav-button{
-    background:#FFBA00;
+    background:#070A57;
     font-family: 'Poppins', sans-serif;
     font-size: 16px;
     padding: 5px 10px;
@@ -256,7 +259,7 @@ button.nav-button{
     height: 100%;
 }
 .highlight{
-    color: #FFBA00;
+    color:#070A57;
 }
 .left-content h2 {
     font-family: 'Roboto', sans-serif;
@@ -275,7 +278,7 @@ button.nav-button{
     color: #64707D;
 }
 .call-to-action button {
-    background: #FFBA00;
+    background: #070A57;
     border: none;
     font-family: 'Roboto',sans-serif;
     font-size: 18px;
@@ -291,7 +294,7 @@ button.nav-button{
     font-family: 'Roboto',sans-serif;
     font-size: 18px;
     font-weight: 500;
-    color: #FFBA00;
+    color:#070A57;
     text-decoration: underline;
     margin-left: 30px;
 }
